# archive-desk

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  index.html  package-lock.json  package.json  vite.config.ts
backend/: README.md  pyproject.toml
backend/archivedesk/: __init__.py  app.py  config.py  database.py  errors.py  exporter.py  integrity.py  main.py  schemas.py  security.py  telegram.py
backend/tests/: test_api.py  test_exporter.py  test_exporter_unit.py  test_security_config.py
docs/: DOCKER.md  IMPLEMENTATION_STATUS.md  ROUND1_SPEC.md
docs/schemas/: round1-manifest.schema.json  round1-result.schema.json
scripts/: New-DockerSecret.ps1
src/: App.tsx  api.ts  styles.css
src/app/: AppRouter.tsx  AppShell.tsx  ExportStepper.tsx  model.tsx
src/pages/: ExportPage.tsx  JobPage.tsx  JobsPage.tsx  LoginPage.tsx  SettingsPage.tsx  SetupPage.tsx  SystemPages.tsx
tests/: README.md
tests/acceptance/: verify_round1.py
tests/fixtures/: malicious_inputs.json  resume_source.txt  secret_canaries.txt
