[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "archivedesk-backend"
version = "0.1.0a0"
description = "Local Telegram chat export backend for Archive Desk"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=46,<50",
  "fastapi>=0.115,<1",
  "pydantic>=2.9,<3",
  "telethon>=1.40,<2",
  "tzdata>=2025.2; sys_platform == 'win32'",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
]

[project.scripts]
archivedesk-backend = "archivedesk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["archivedesk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
